fix: modals bottom gap on scroll

--- a/src/components/dialog/style.module.css
+++ b/src/components/dialog/style.module.css
@@ -1,36 +1,39 @@
 .backdrop {
-    top: 0;
-    left: 0;
-    opacity: 1;
-    width: 100svw;
-    height: 100svh;
-    position: fixed;
-    background: var(--react-modal-pro-backdrop-background);
-    z-index: var(--react-modal-pro-dialog-backdrop-z-index);
+  inset: 0;
+  width: 100%;
+  min-height: 100vh;
+  min-height: 100dvh;
+  position: fixed;
+  opacity: 1;
+  padding-bottom: env(safe-area-inset-bottom, 0);
+  padding-top: env(safe-area-inset-top, 0);
+  overscroll-behavior: contain;
+  background: var(--react-modal-pro-backdrop-background);
+  z-index: var(--react-modal-pro-dialog-backdrop-z-index);
 }
 
 .sheet {
-    top: 50%;
-    left: 50%;
-    opacity: 1;
-    position: fixed;
-    transform: translate(-50%, -50%);
-    padding: var(--react-modal-pro-sheet-padding);
-    border-radius: var(--react-modal-pro-sheet-radius);
-    background: var(--react-modal-pro-sheet-background);
-    z-index: var(--react-modal-pro-dialog-sheet-z-index);
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  padding: var(--react-modal-pro-sheet-padding);
+  border-radius: var(--react-modal-pro-sheet-radius);
+  background: var(--react-modal-pro-sheet-background);
+  z-index: var(--react-modal-pro-dialog-sheet-z-index);
 }
 
 @media only screen and (max-width: 600px) {
-    .sheet {
-        min-width: 80%;
-        min-height: 200px;
-    }
+  .sheet {
+    min-width: 80%;
+    min-height: 200px;
+  }
 }
 
 @media only screen and (min-width: 601px) {
-    .sheet {
-        min-width: 400px;
-        min-height: 250px;
-    }
+  .sheet {
+    min-width: 400px;
+    min-height: 250px;
+  }
 }
